--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -77,3 +77,41 @@ $primary-color: #1570ef;
   }
 }
 // End
+
+.member__item {
+  position: relative;
+  cursor: pointer;
+  &:hover .member__img {
+    filter: grayscale(0);
+  }
+  &:hover .member__info {
+    opacity: 1;
+  }
+  .member__info {
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    position: absolute;
+    opacity: 0;
+    bottom: 0;
+    align-content: end;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(23, 92, 211, 0) 0%,
+      rgba(19, 85, 198, 0.9) 70.88%
+    );
+    background-size: cover;
+    width: 90%;
+    height: 84px;
+    transition: 0.4s;
+  }
+  .member__img {
+    border-radius: 1rem;
+    filter: grayscale(1);
+    transition: 0.4s;
+  }
+}
+@media (max-width: 1024px) {
+  .hide__background_mb {
+    background: unset !important;
+  }
+}
