--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -1,11 +1,12 @@
-$primary-color: #1570ef;
+$primary-color: #f27145;
+$primary-color-blue: #1570ef;
 .pacifico_font {
   font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;
 }
 .text_hover_default:hover {
-  color: #f27145;
+  color: $primary-color;
 }
 .header__menu {
   position: relative;
@@ -43,6 +44,7 @@ $primary-color: #1570ef;
       background-color: #fff;
       color: #175cd3;
       font-weight: 600;
+      transition: all 0.3s linear;
     }
     &:after {
       content: "";
@@ -53,6 +55,20 @@ $primary-color: #1570ef;
       top: 15px;
       left: 50%;
       z-index: -1;
+    }
+    &_title {
+      @extend .pacifico_font;
+      @apply text-[28px] font-normal mt-2 md:mt-5;
+      transition: all 0.3s linear;
+    }
+    &:hover {
+      &:before {
+        background-color: #016de2;
+        @apply text-white;
+      }
+      .progressbar__step_title {
+        color: $primary-color;
+      }
     }
     &:last-child:after {
       content: none;
