--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -20,6 +20,23 @@ $primary-color-blue: #1570ef;
     opacity: 0.2;
     display: block;
   }
+  &_item {
+    @apply relative h-8 hover:text-white text-[#EAECF0];
+    transition: all 0.3s ease-in;
+    &:hover:after {
+      background-color: $primary-color;
+      height: 3px;
+    }
+    &:after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 0;
+      top: 32px;
+      right: 0;
+      transition: all 0.3s ease-in;
+    }
+  }
 }
 // Visa step
 .progressbar {
