--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -1,5 +1,7 @@
 $primary-color: #f27145;
 $primary-color-blue: #1570ef;
+$color-blue-700: #2e90fa;
+
 .pacifico_font {
   font-family: "Pacifico", cursive;
   font-weight: 400;
@@ -9,7 +11,7 @@ $primary-color-blue: #1570ef;
   color: $primary-color;
 }
 .header__menu {
-  position: relative;
+  @apply py-4 relative;
   &:after {
     content: "";
     height: 1px;
@@ -36,6 +38,27 @@ $primary-color-blue: #1570ef;
       right: 0;
       transition: all 0.3s ease-in;
     }
+  }
+}
+.header__sticky {
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  position: fixed;
+  background-color: #fff;
+  border-bottom: 1px solid #d0d5dd;
+  @apply transition-all duration-500 ease-in translate-y-0 opacity-100;
+  .header__menu_item {
+    color: #283448;
+    padding-bottom: 10px;
+  }
+  .header__menu_search {
+    border: 1px solid #d0d5dd;
+    box-shadow: 0px 1px 2px 0px #1018280d;
+  }
+  .header__menu_phone_contact {
+    @apply text-blue-700;
+    border: 1px solid #2e90fa;
   }
 }
 // Visa step
@@ -93,22 +116,6 @@ $primary-color-blue: #1570ef;
   }
 }
 
-@media (max-width: 767px) {
-  .progressbar {
-    flex-direction: column;
-    &__step:after {
-      left: 13%;
-      top: 25%;
-      width: 2px;
-      height: 100%;
-    }
-    &__step:before {
-      position: absolute;
-      left: 9%;
-      top: 13%;
-    }
-  }
-}
 // End
 
 .member__item {
@@ -134,13 +141,41 @@ $primary-color-blue: #1570ef;
     );
     background-size: cover;
     width: 90%;
-    height: 84px;
-    transition: 0.4s;
+    height: 110px;
+    transition: all 0.3s ease-in;
+    p:first-child {
+      color: $primary-color;
+    }
   }
   .member__img {
     border-radius: 1rem;
-    filter: grayscale(1);
     transition: 0.4s;
+  }
+}
+.back__top {
+  @apply fixed bottom-[20%] right-1 z-[999];
+  &_btn {
+    @apply w-16 flex flex-col items-center h-[78px] transition duration-500 opacity-0 transform translate-y-10;
+  }
+  &_icon {
+    width: 48px;
+    height: 45.6px;
+  }
+}
+@media (max-width: 767px) {
+  .progressbar {
+    flex-direction: column;
+    &__step:after {
+      left: 13%;
+      top: 25%;
+      width: 2px;
+      height: 100%;
+    }
+    &__step:before {
+      position: absolute;
+      left: 9%;
+      top: 13%;
+    }
   }
 }
 @media (max-width: 1024px) {
