--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -7,11 +7,11 @@ $color-blue-700: #2e90fa;
   font-weight: 400;
   font-style: normal;
 }
-.text_hover_default:hover {
-  color: $primary-color;
+.text_hover_default {
+  @apply transition-all duration-300 hover:!text-[#f27145]  cursor-pointer;
 }
 .header__menu {
-  @apply py-4 relative;
+  @apply pt-4 relative;
   &:after {
     content: "";
     height: 1px;
@@ -39,15 +39,65 @@ $color-blue-700: #2e90fa;
       transition: all 0.3s ease-in;
     }
   }
+  .nav_icon {
+    width: 36px;
+    height: 40px;
+    position: relative;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    span {
+      display: block;
+      position: absolute;
+      height: 3.2px;
+      width: 100%;
+      background: #ffffff;
+      border-radius: 9px;
+      opacity: 1;
+      left: 0;
+      transform: rotate(0deg);
+      transition: 0.4s ease-in;
+    }
+    span:nth-child(1) {
+      top: 10px;
+      transform-origin: right center;
+    }
+
+    span:nth-child(2) {
+      top: 20px;
+      transform-origin: right center;
+    }
+
+    span:nth-child(3) {
+      top: 30px;
+      transform-origin: right center;
+    }
+    &.open {
+      span:nth-child(1) {
+        transform: rotate(-45deg) translate(8px, 12px);
+        top: 3px;
+        left: -8px;
+      }
+      span:nth-child(2) {
+        width: 0%;
+        opacity: 0;
+      }
+      span:nth-child(3) {
+        transform: rotate(45deg) translate(11px, -8px);
+        top: 29px;
+        left: -8px;
+      }
+    }
+  }
 }
 .header__sticky {
+  @apply transition-all duration-300 ease-in translate-y-0 opacity-100 py-4;
   top: 0;
   width: 100%;
   z-index: 99;
   position: fixed;
   background-color: #fff;
   border-bottom: 1px solid #d0d5dd;
-  @apply transition-all duration-500 ease-in translate-y-0 opacity-100;
   .header__menu_item {
     color: #283448;
     padding-bottom: 10px;
@@ -57,9 +107,17 @@ $color-blue-700: #2e90fa;
     box-shadow: 0px 1px 2px 0px #1018280d;
   }
   .header__menu_phone_contact {
-    @apply text-blue-700;
+    color: #175cd3;
     border: 1px solid #2e90fa;
   }
+  .nav_icon {
+    span {
+      background-color: #000;
+    }
+  }
+}
+.header__menu_phone_contact {
+  @extend .text_hover_default;
 }
 // Visa step
 .progressbar {
@@ -117,7 +175,6 @@ $color-blue-700: #2e90fa;
 }
 
 // End
-
 .member__item {
   position: relative;
   cursor: pointer;
@@ -162,6 +219,7 @@ $color-blue-700: #2e90fa;
     height: 45.6px;
   }
 }
+
 @media (max-width: 767px) {
   .progressbar {
     flex-direction: column;
