--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -42,6 +42,13 @@ $color-blue-700: #2e90fa;
       transition: all 0.3s ease-in;
     }
   }
+  &_item.active {
+    color: $primary-color !important;
+    &:after {
+      background-color: $primary-color;
+      height: 3px;
+    }
+  }
 }
 .header__sticky {
   @apply transition-all duration-300 ease-in opacity-100;
