--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,9 @@
   .text-22 {
     @apply text-[22px] leading-[31.9px];
   }
+  .text-28 {
+    @apply text-[28px] leading-[33.6px];
+  }
   .text-32 {
     @apply text-[32px] leading-[38.4px];
   }
