--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,24 @@
       margin: 0 auto !important;
     }
   }
+  .loader_spiner {
+    border: 3px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 3px solid #3498db;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    animation: spiner 2s linear infinite;
+  }
+
+  @keyframes spiner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 }
 
 @layer base {
