--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -54,7 +54,7 @@ $color-blue-700: #2e90fa;
   border-bottom: 1px solid #d0d5dd;
   .header__menu_item {
     color: #283448;
-    padding-bottom: 10px;
+    // padding-bottom: 10px;
     &:hover {
       color: $primary-color;
     }
