--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,28 @@
       transform: rotate(360deg);
     }
   }
+  .custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f0f0f0;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+  }
 }
 
 @layer base {
