--- a/src/styles/AppLoader.scss
+++ b/src/styles/AppLoader.scss
@@ -11,30 +11,30 @@
   align-items: center;
   display: flex;
   opacity: 1;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
-  #app-global-loader {
-    max-width: 300px;
-    .animated-fill {
-      animation: fill-opacity-animation 0.7s ease-in-out forwards,
-        stroke-hide-animation 0.5s 0.5s ease-in-out forwards;
-    }
+  // transition: opacity 0.5s ease, visibility 0.5s ease;
+  // #app-global-loader {
+  //   max-width: 300px;
+  //   .animated-fill {
+  //     animation: fill-opacity-animation 0.7s ease-in-out forwards,
+  //       stroke-hide-animation 0.5s 0.5s ease-in-out forwards;
+  //   }
 
-    @keyframes fill-opacity-animation {
-      0% {
-        fill-opacity: 0;
-      }
-      100% {
-        fill-opacity: 1;
-      }
-    }
+  //   @keyframes fill-opacity-animation {
+  //     0% {
+  //       fill-opacity: 0;
+  //     }
+  //     100% {
+  //       fill-opacity: 1;
+  //     }
+  //   }
 
-    @keyframes stroke-hide-animation {
-      0% {
-        stroke-opacity: 1;
-      }
-      100% {
-        stroke-opacity: 0;
-      }
-    }
-  }
+  //   @keyframes stroke-hide-animation {
+  //     0% {
+  //       stroke-opacity: 1;
+  //     }
+  //     100% {
+  //       stroke-opacity: 0;
+  //     }
+  //   }
+  // }
 }
