--- a/src/styles/ckeditor-content.scss
+++ b/src/styles/ckeditor-content.scss
@@ -1,3 +1,4 @@
+.ckeditor_content_container *,
 .ckeditor_container .cke_editable * {
   all: revert-layer;
   img,
@@ -17,28 +18,26 @@
     vertical-align: middle;
   }
 }
+.ckeditor_content_container,
+.ckeditor_container .cke_editable {
+  table td,
+  table th {
+    padding: 8px;
+  }
 
-.ckeditor_container {
-  .cke_editable {
-    table td,
-    table th {
-      padding: 8px;
-    }
-
-    table {
-      width: 100%;
-      text-align: center;
-    }
-    .cke_show_borders table.cke_show_border,
-    .cke_show_borders table.cke_show_border > tr > td,
-    .cke_show_borders table.cke_show_border > tr > th,
-    .cke_show_borders table.cke_show_border > tbody > tr > td,
-    .cke_show_borders table.cke_show_border > tbody > tr > th,
-    .cke_show_borders table.cke_show_border > thead > tr > td,
-    .cke_show_borders table.cke_show_border > thead > tr > th,
-    .cke_show_borders table.cke_show_border > tfoot > tr > td,
-    .cke_show_borders table.cke_show_border > tfoot > tr > th {
-      border: #d3d3d3 1px dotted;
-    }
+  table {
+    width: 100%;
+    text-align: center;
+  }
+  .cke_show_borders table.cke_show_border,
+  .cke_show_borders table.cke_show_border > tr > td,
+  .cke_show_borders table.cke_show_border > tr > th,
+  .cke_show_borders table.cke_show_border > tbody > tr > td,
+  .cke_show_borders table.cke_show_border > tbody > tr > th,
+  .cke_show_borders table.cke_show_border > thead > tr > td,
+  .cke_show_borders table.cke_show_border > thead > tr > th,
+  .cke_show_borders table.cke_show_border > tfoot > tr > td,
+  .cke_show_borders table.cke_show_border > tfoot > tr > th {
+    border: #d3d3d3 1px dotted;
   }
 }
