--- a/src/styles/ckeditor-content.scss
+++ b/src/styles/ckeditor-content.scss
@@ -17,6 +17,7 @@
     display: block;
     vertical-align: middle;
   }
+  max-width: 100% !important;
 }
 .ckeditor_content_container,
 .ckeditor_container .cke_editable {
