--- a/src/styles/ckeditor-content.scss
+++ b/src/styles/ckeditor-content.scss
@@ -41,4 +41,8 @@
   .cke_show_borders table.cke_show_border > tfoot > tr > th {
     border: #d3d3d3 1px dotted;
   }
+  img {
+    width: 100% !important;
+    height: auto !important;
+  }
 }
