--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -196,7 +196,7 @@ $color-blue-700: #2e90fa;
       z-index: -1;
     }
     &_title {
-      @apply text-[28px] font-normal mt-2 md:mt-5;
+      @apply text-[28px] font-semibold mt-2 md:mt-5;
       transition: all 0.3s linear;
     }
     &:hover {
@@ -231,11 +231,7 @@ $color-blue-700: #2e90fa;
     opacity: 0;
     bottom: 0;
     align-content: end;
-    background-image: linear-gradient(
-      to bottom,
-      rgba(23, 92, 211, 0) 0%,
-      rgba(19, 85, 198, 0.9) 70.88%
-    );
+    background-image: linear-gradient(to bottom, rgba(23, 92, 211, 0) 0%, rgba(19, 85, 198, 0.9) 70.88%);
     background-size: cover;
     width: 90%;
     height: 110px;
